# Fractal-Map-Discovery

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
src/: AbstractFractalViewer.cpp  AbstractFractalViewer.h  AbstractRenderNode.h  JuliaSet.cpp  JuliaSet.h  JullianSet.cpp  JullianSet.h  MainMenu.cpp  MainMenu.h  MandelbrotSet.cpp  MandelbrotSet.h  RenderNode.h  ScreenMode.h  main.cpp
src/fractals/: JuliaSet.cpp  JuliaSet.h  MandelbrotSet.cpp  MandelbrotSet.h
